// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchSelect > should render correctly with errors 1`] = `
<div
  className="govuk-form-group govuk-form-group--error"
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label govuk-label--l"
      htmlFor="test-id-input"
    >
      Test Data
    </label>
    <div
      className=""
    >
      <span
        className="govuk-error-message"
        id="test-id-error"
      >
        <span
          className="govuk-visually-hidden"
        >
          Error: 
        </span>
        There was an error
      </span>
      <div
        className="govuk-input--error css-b62m3t-container"
        id="test-id"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-dropdown-test-id-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className=" css-1kxfjwu-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1fdsijx-ValueContainer"
          >
            <div
              className=" css-1dimb5e-singleValue"
            >
              Ocean
            </div>
            <div
              className=" css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id="test-id-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className=" css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              className=" css-1xc3v61-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-tj5bde-Svg"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <table
      className="govuk-table"
    >
      <thead
        className="govuk-table__head"
      >
        <tr
          className="govuk-table__row"
        />
      </thead>
      <tbody
        className="govuk-table__body"
      >
        <tr
          className="govuk-table__row"
        >
          <th
            className="govuk-table__header align-middle"
            scope="row"
          >
            test row 1
          </th>
          <td
            className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
          >
            1
          </td>
        </tr>
        <tr
          className="govuk-table__row"
        >
          <th
            className="govuk-table__header align-middle"
            scope="row"
          >
            test row 2
          </th>
          <td
            className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
          >
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`SearchSelect > should render correctly with no errors 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label govuk-label--l"
      htmlFor="test-id-input"
    >
      Test Data
    </label>
    <div
      className=""
    >
      <div
        className=" css-b62m3t-container"
        id="test-id"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-dropdown-test-id-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className=" css-1kxfjwu-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1fdsijx-ValueContainer"
          >
            <div
              className=" css-1dimb5e-singleValue"
            >
              Ocean
            </div>
            <div
              className=" css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id="test-id-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className=" css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              className=" css-1xc3v61-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-tj5bde-Svg"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <table
      className="govuk-table"
    >
      <thead
        className="govuk-table__head"
      >
        <tr
          className="govuk-table__row"
        />
      </thead>
      <tbody
        className="govuk-table__body"
      >
        <tr
          className="govuk-table__row"
        >
          <th
            className="govuk-table__header align-middle"
            scope="row"
          >
            test row 1
          </th>
          <td
            className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
          >
            1
          </td>
        </tr>
        <tr
          className="govuk-table__row"
        >
          <th
            className="govuk-table__header align-middle"
            scope="row"
          >
            test row 2
          </th>
          <td
            className="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
          >
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
